--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
   <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <meta name="author" content="862210067">
 
-  <title>John Doe - Business Administration</title>
+  <title>Faith Amakor - Pediatric Nurse</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Faith Amakor</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/faithamakor.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,24 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Faith Amakor
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
-
-        Enter bio here<br><br>
-
-        Enter bio here
+        <div class="subheading mb-5">Biochemistry📚</div>
+        <p class="lead mb-4">My name is Faith Amakor and I  graduated from Dr. Richard A. Vladovic Harbor Teacher Preparation Academy, previously known as Harbor Teacher Preparation Academy. During high school, I served as a leader in Educators Rising as a Treasurer, in Carson Youth Commission as a Youth Commissioner, and in School-Wide Positive Intervention and Support Committee as a Student Representative. While attending high school, I also attended Los Angeles Harbor College as a student. When I graduated from high school in June 2020 with my high school diploma, I graduated from Los Angeles Harbor College in June 2020 with 3 A.A. degrees. In Fall 2020, I will be attending the University of California, Riverside as a Biochemistry major. While attending UCR I hope to graduate with my bachelor’s degree in Biochemistry and get admitted to the University of California, Los Angeles School of Nursing. My future career goal is to become a Pediatric Nurse.<br><br>
+        My family believes as a woman that I should be the one to help around the house and contribute to the family. Throughout my high school years, I’ve always had some type of responsibility around the house that contributes to the success of my family. Whether it’s by washing the dishes or taking care of my little siblings, these responsibilities helped shaped who I am today. As time passed by, I began to realize that the same qualities and actions in my personal life would prove me successful in the field of nursing. I not only upheld a nurturing and responsible personality, but I also have the endurance, strong grades, and always conveyed the motto, “Don't do life alone”. This meant that the people I surround myself with helps me grow and bring out the best in me. As a result, the people around me encouraged me that the rigorous and intense demands of nursing match my capabilities. My goal in nursing is to attain core characteristics that define a successful nurse, to commit myself to lifelong learning, and to provide ongoing support to those in need of medical assistance.<br><br>
+        A nurse is defined as someone who has integrity, persistence, a caring attitude, and the ability to work in a team. As a nurse having persistence is not giving up when you don’t have a solution even if it means seeking out help from others when necessary. A core characteristic of being a nurse is to work well in a team setting with other care professionals. Being a nurse is a lifelong learning commitment. I believe that once I graduate my learning doesn’t stop there. I learn something new every day from different people. I know that my education continues for as long as I am in the nursing profession. As a nurse, I provide ongoing support to those in need of medical assistance. I’ve always wanted to go into a profession that helps me give back to the community. It would be an honor for me to serve people in need of medical assistance. With these goals, I hope to obtain the characteristics needed to provide my patients with satisfactory care.
         </p>
         <div class="social-icons">
-          <a target="_blank" id="linkedin" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="instagram" href="https://www.instagram.com/faith_lovely_14/">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="github" href="https://github.com">
+          <a target="_blank" id="github" href="https://github.com/FaithAmakor">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="twitter" href="https://twitter.com">
+          <a target="_blank" id="twitter" href="https://twitter.com/faith_lovely_14">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="email" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="email" href="mailto:faithamakor14@gmail.com">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +90,45 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Youth Commissioner</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">City of Carson</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • We have a meeting every second Wednesday of the month to discuss upcoming events such as the Youth Conference, etc<br> 
+              • We are assigned a park for us to visit and report back.<br>
+              • We discuss ways to increase the attendance on teens at parks such as events.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">February 2019 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Student Representative</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">School-Wide Positive Intervention and Support Committee</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • My job as a student representative during our monthly meetings is to make sure that the students’ voices are heard.<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">August 2019 - June 2020</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Youth Worker</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">City of Carson</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
-
+            • My job is to look over the park with my supervisor and co-workers.<br>
+            • We do daily inspection on the park and get the field ready for the next baseball or sofeball games.<br>
+            •  also  help look after the Summer Day Camp children.<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">July 2019 - August 2019</span>
           </div>
         </div>
 
@@ -151,34 +146,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <h3 class="mb-0">Dr. Richard A. Vladovic Harbor Teacher Preparation Academy</h3>
+            <div class="subheading mb-3">Diploma</div>
+            <div>High School Diploma</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2016 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Los Angeles Harbor College</h3>
+            <div class="subheading mb-3">Associate of Arts Degree</div>
+            <div>A.A. in Liberal Arts and Sciences: Arts and Humanities, Mathematics and Natural Sciences, and Social and Behavioral Sciences</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2016 - June 2020</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">University of California, Riverside</h3>
+            <div class="subheading mb-3">Bachelor of Science</div>
+            <div>B.S. in Biochemistry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2020 - Present</span>
           </div>
         </div>
 
@@ -191,7 +186,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/Grad Pics.JPG" width="500px">
+            <img src="img/Grad Caps.HEIC" width="500px"><br>
+            <img src="img/Diploma (2).JPG" width="500px">
+            <img src="img/Diploma (1).jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +197,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Faith Amakor</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
