--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <p>
             • My job is to look over the park with my supervisor and co-workers.<br>
             • We do daily inspection on the park and get the field ready for the next baseball or sofeball games.<br>
-            •  also  help look after the Summer Day Camp children.<br>
+            • We also help look after the Summer Day Camp children.<br>
           </p>
           </div>
           <div class="resume-date text-md-right">
