--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="YourDescriptionHere">
   <meta name="author" content="862210067">
 
-  <title>Faith Amakor - Pediatric Nurse</title>
+  <title>Faith Amakor - Resume</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
